# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      
      INSTRUCTION_OBSERVATION = "Extract and capture the most relevant facts from the provided input for later retrieval."
      INSTRUCTION_QUERY = "Formulate a focused query that describes the needed information succinctly."
      INSTRUCTION_RESPONSE = "Provide a concise, actionable response referencing stored knowledge when appropriate."
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "Raw textual observation captured for the knowledge base."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Raw query text describing the needed information."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw[:80]}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query received: {query.raw}")
              result = "\n".join(self.store) if self.store else "No information stored."
              return result[:1000]
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      
      INSTRUCTION_OBSERVATION = "Extract the most important detail from the provided text for storage."
      INSTRUCTION_QUERY = "Formulate a simple keyword query that captures what should be retrieved from the knowledge base."
      INSTRUCTION_RESPONSE = "Return a concise summary of relevant stored knowledge that answers the query."
      
      def process_text(text: str) -> str:
          return text.strip()
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "The full text to store in the knowledge base."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "The text describing what information to retrieve."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              processed = process_text(observation.raw)
              self.store.append(processed)
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Paris',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': 'green apple',
  })
# ---
# name: test_observation_generation
  dict({
    'output': '{"raw":"The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create an Observation object to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The Observation must conform to this schema:
      // Observation: Raw text observation to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_observation_with_feedback
  dict({
    'output': '{"raw":"Evaluation result score 0.0 (incorrect) with ground truth Paris."}',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate an observation to write into memory.
      
      The observation must be a JSON object matching this schema:
      // Observation: Raw text observation to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '{"raw":"capital of France"}',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      Diagnosis:
      - The knowledge base was simply storing raw strings and returning the entire corpus regardless of the incoming question, so queries like “What is the capital of France?” never retrieved the relevant fact while returning unstructured data that the answerer couldn’t interpret.
      - There was no structured way for the agent to specify what topic or keywords it was looking for, so the read() implementation had no mechanism for targeted retrieval.
      - The new requirements also ask for explicit instructions so the observation/query agents can populate structured fields, which were missing and prevented the system from collecting actionable metadata.
      
      Fixes:
      1. Introduce structured Observation/Query dataclasses so facts are recorded with a topic, details, and optional source, and queries can specify topics plus detail keywords.
      2. Implement a SQLite-backed knowledge store with basic filtering using topic and keyword matches.
      3. Limit read() output to at most 1000 characters while still returning the most recent relevant entries and logging actions for transparency.
      4. Update the instruction constants to guide the LLMs to emit structured JSON for writing and querying, and to keep responses focused and concise.
      
      ```python
      from dataclasses import dataclass, field
      from typing import Optional
      
      # Clear instructions guide the observation/query agents and final response format.
      INSTRUCTION_OBSERVATION = (
          "Summarize a single fact by providing a topic, a concise detail about that topic, "
          "and an optional source if available; output must match the Observation schema."
      )
      INSTRUCTION_QUERY = (
          "Frame a query by naming the topic of interest and listing any keywords "
          "that should appear in the detail; follow the Query schema for your response."
      )
      INSTRUCTION_RESPONSE = (
          "Answer the user question with one or two factual sentences derived from the retrieved knowledge."
      )
      
      
      @dataclass
      class Observation:
          # Structured information keeps stored facts searchable and easy to match.
          topic: str = field(metadata={"description": "Short topic name or title for this fact"})
          details: str = field(metadata={"description": "Supporting detail or explanation for the topic"})
          source: Optional[str] = field(
              default=None,
              metadata={"description": "Optional source or reference for provenance"}
          )
      
      
      @dataclass
      class Query:
          # Topic + keywords let the read() method focus its retrieval.
          topic: Optional[str] = field(
              default=None,
              metadata={"description": "Primary topic to match when searching the knowledge base"}
          )
          detail_keywords: list[str] = field(
              default_factory=list,
              metadata={"description": "List of keywords to look for inside the detail text"}
          )
      
      
      class KnowledgeBase:
          """SQLite-backed knowledge base that filters observations by topic and keywords."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.db = toolkit.db
              # Always ensure the table exists so writes can proceed without race conditions.
              with self.db:
                  self.db.execute(
                      """
                      CREATE TABLE IF NOT EXISTS observations (
                          id INTEGER PRIMARY KEY AUTOINCREMENT,
                          topic TEXT NOT NULL,
                          details TEXT NOT NULL,
                          source TEXT
                      )
                      """
                  )
              self.toolkit.logger.debug("Knowledge base initialized with SQLite table.")
      
          def write(self, observation: Observation) -> None:
              """Insert a single structured fact into the SQLite store for later retrieval."""
              with self.db:
                  self.db.execute(
                      "INSERT INTO observations (topic, details, source) VALUES (?, ?, ?)",
                      (observation.topic, observation.details, observation.source),
                  )
              self.toolkit.logger.debug(
                  f"Stored observation for topic='{observation.topic}' "
                  f"with details='{observation.details[:50]}...' "
                  f"and source='{observation.source}'."
              )
      
          def read(self, query: Query) -> str:
              """
              Retrieve up to a few recent observations matching the topic and keyword filters.
              The result is truncated to 1000 characters so it stays within the response budget.
              """
              self.toolkit.logger.debug(
                  f"Executing read with topic='{query.topic}' "
                  f"and keywords={query.detail_keywords}."
              )
      
              conditions = []
              params = []
      
              if query.topic:
                  conditions.append("topic LIKE ?")
                  params.append(f"%{query.topic}%")
      
              for keyword in query.detail_keywords:
                  clean_keyword = keyword.strip()
                  if not clean_keyword:
                      continue
                  conditions.append("(details LIKE ? OR topic LIKE ?)")
                  params.extend((f"%{clean_keyword}%", f"%{clean_keyword}%"))
      
              sql = "SELECT topic, details, COALESCE(source, '') FROM observations"
              if conditions:
                  sql += " WHERE " + " AND ".join(conditions)
              sql += " ORDER BY id DESC LIMIT 5"
      
              rows = list(self.db.execute(sql, params))
              self.toolkit.logger.debug(f"Retrieved {len(rows)} rows for the query.")
      
              if not rows:
                  self.toolkit.logger.debug("No matching observations found.")
                  return "No relevant information found."
      
              response_parts = []
              current_length = 0
              max_length = 1000
      
              for topic, details, source in rows:
                  snippet = f"{topic}: {details}"
                  if source:
                      snippet += f" (source: {source})"
                  delimiter = "\n" if response_parts else ""
                  snippet_length = len(delimiter) + len(snippet)
                  if current_length + snippet_length > max_length:
                      # If this is the first snippet and already too long, truncate it instead of dropping everything.
                      if not response_parts:
                          truncated = snippet[: max_length - len(" (truncated)")] + " (truncated)"
                          response_parts.append(truncated)
                      break
                  response_parts.append(f"{delimiter}{snippet}" if response_parts else snippet)
                  current_length += snippet_length
      
              result = "\n".join(part.lstrip("\n") for part in response_parts)
              self.toolkit.logger.debug(f"Read result length: {len(result)} chars.")
              return result[:max_length]
      ```
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining Observation, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Three module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      
      These are inserted into the task agent prompts as the main directive sentence. They must not be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and three module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE to steer the task LLM's output format.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      
      
      @dataclass
      class Observation:
          """Raw text observation to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.300</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is the capital of France?</question>
      <expected>Paris</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is the capital of France?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output the complete improved code in a ```python``` block.
      </task>
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      from dataclasses import dataclass, field
      import re
      import sqlite3
      
      # These instructions are consumed by the task agent prompts.
      # Keep them explicit and concise so observation/query generation is reliable.
      INSTRUCTION_OBSERVATION = (
          "Extract the key factual statement(s) from the provided text and store them verbatim "
          "or near-verbatim in a concise single raw string. Preserve critical names, IDs, codes, and numbers."
      )
      
      INSTRUCTION_QUERY = (
          "Convert the user question into a direct retrieval query string that keeps the important entities "
          "and requested fact exactly (project names, people, codes, dates, identifiers)."
      )
      
      INSTRUCTION_RESPONSE = (
          "Answer using only retrieved memory. Be concise and factual. If memory is insufficient, say you do not know."
      )
      
      
      @dataclass
      class Observation:
          # JSON-compatible field type with description for the external LLM.
          raw: str = field(
              metadata={
                  "description": "Concise factual memory text to store (include exact names/codes/values)."
              }
          )
      
      
      @dataclass
      class Query:
          # JSON-compatible field type with description for the external LLM.
          raw: str = field(
              metadata={
                  "description": "Raw natural-language retrieval query containing the key entities and requested fact."
              }
          )
      
      
      class KnowledgeBase:
          """
          Simple deterministic KB:
          - write(): stores raw observation text in SQLite.
          - read(): keyword-overlap retrieval over recent rows, returns short snippets (<=1000 chars).
          Design goal: fast, robust, no LLM calls, and easy to debug.
          """
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.db: sqlite3.Connection = toolkit.db
      
              # WHY: SQLite storage is durable for the run and simple to query quickly.
              self.db.execute(
                  """
                  CREATE TABLE IF NOT EXISTS memories (
                      id INTEGER PRIMARY KEY AUTOINCREMENT,
                      raw TEXT NOT NULL
                  )
                  """
              )
              self.db.commit()
              self.toolkit.logger.debug("KnowledgeBase initialized; table 'memories' is ready.")
      
          def write(self, observation: Observation) -> None:
              text = (observation.raw or "").strip()
              if not text:
                  self.toolkit.logger.debug("write() skipped empty observation.")
                  return
      
              # Normalize whitespace so retrieval is more stable.
              text = re.sub(r"\s+", " ", text)
      
              self.db.execute("INSERT INTO memories(raw) VALUES (?)", (text,))
              self.db.commit()
              self.toolkit.logger.debug(f"write() stored memory: {text[:120]}")
      
          def read(self, query: Query) -> str:
              q = (query.raw or "").strip()
              self.toolkit.logger.debug(f"read() query='{q[:120]}'")
      
              rows = self.db.execute(
                  "SELECT id, raw FROM memories ORDER BY id DESC LIMIT 300"
              ).fetchall()
      
              if not rows:
                  self.toolkit.logger.debug("read(): no rows in memory.")
                  return "No information stored."
      
              def tokenize(s: str) -> set[str]:
                  # WHY: lightweight tokenization is fast and good enough for factual matching.
                  return set(re.findall(r"[a-z0-9]+", s.lower()))
      
              q_tokens = tokenize(q)
              q_lower = q.lower()
      
              scored = []
              for row_id, text in rows:
                  t_lower = text.lower()
                  t_tokens = tokenize(text)
      
                  score = 0
                  if q_lower and q_lower in t_lower:
                      score += 100  # strong bonus for direct phrase match
                  if q_tokens:
                      score += len(q_tokens & t_tokens)  # token overlap
      
                  # Include rows that have some evidence of relevance.
                  if score > 0:
                      scored.append((score, row_id, text))
      
              # Fallback: if no overlap found, return the most recent snippets.
              if not scored:
                  self.toolkit.logger.debug("read(): no overlap matches; returning recent fallback.")
                  candidates = [text for _, text in rows[:3]]
              else:
                  scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
                  candidates = [t for _, _, t in scored[:3]]
                  self.toolkit.logger.debug(
                      f"read(): matched {len(scored)} rows; top score={scored[0][0]}"
                  )
      
              # Build compact output for downstream answer model.
              result = "\n".join(f"- {c}" for c in candidates)
      
              # Hard cap required by runtime constraints.
              if len(result) > 1000:
                  result = result[:997] + "..."
      
              return result
    ''',
    'round1_score': 0.0,
    'round2_output': "Project Zephyr's access code is DELTA-7742.",
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '{"raw":"capital of France"}',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'The capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Summarize new information into concise, structured entries for storage."
      INSTRUCTION_QUERY = "Formulate retrieval requests that focus on the relevant stored context."
      INSTRUCTION_RESPONSE = "Answer using only stored knowledge, keeping responses concise and grounded."
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "The raw text content representing the new knowledge to store."})
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "The text describing the context or intent for retrieval."})
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.toolkit.logger.debug(f"Writing observation of length {len(observation.raw)}")
              self.store.append(observation.raw)
      
          def read(self, query: Query) -> str:
              aggregated = " ".join(self.store)
              result = aggregated[:1000]
              self.toolkit.logger.debug(f"Read query '{query.raw}' yielding {len(result)} characters")
              return result
    ''',
    'runtime_violation': 'kb.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
